dev-db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-db-deploy
  namespace: dev-ns
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: dev-db-config
        configMap:
          name: dev-configmap
      - name: dev-db-secret
        secret:
          secretName: dev-secret
      containers:
      - name: dev-db-deploy-cont
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: dev-db-config
          mountPath: /etc/db-config
        - name: dev-db-secret
          mountPath: /etc/db-secret
