dev-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dev-svc
  namespace: dev-ns
spec:
  type: LoadBalancer
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
