dev-ingress-client-app-allow.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-ingress-client-app-allow
  namespace: dev-ns
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            client: tcs
